cbits/clang_wrappers_ffi.h

/* *** File manipulation routines *** */

/* <https://clang.llvm.org/doxygen/group__CINDEX__FILES.html> */

static inline void wrap_getFileName(CXFile SFile, CXString * result) {
  *result = clang_getFileName(SFile);
}
static inline unsigned wrap_isInvalidDeclaration(const CXCursor * C) {
  return clang_isInvalidDeclaration(*C);
}
static inline unsigned wrap_Cursor_hasAttrs(const CXCursor * C) {
  return clang_Cursor_hasAttrs(*C);
}
static inline enum CXLinkageKind wrap_getCursorLinkage(const CXCursor * cursor) {
  return clang_getCursorLinkage(*cursor);
}
static inline enum CXVisibilityKind wrap_getCursorVisibility(const CXCursor * cursor) {
  return clang_getCursorVisibility(*cursor);
}
static inline enum CXAvailabilityKind wrap_getCursorAvailability(const CXCursor * cursor) {
  return clang_getCursorAvailability(*cursor);
}
/* OMITTED: int                     clang_getCursorPlatformAvailability (CXCursor cursor, int * always_deprecated, CXString * deprecated_message, int * always_unavailable, CXString * unavailable_message, CXPlatformAvailability * availability, int availability_size); */

/* OMITTED: void                    clang_disposeCXPlatformAvailability (CXPlatformAvailability * availability); */

static inline void wrap_Cursor_getVarDeclInitializer(const CXCursor * cursor, CXCursor * result) {
  *result = clang_Cursor_getVarDeclInitializer(*cursor);
}
static inline int wrap_Cursor_hasVarDeclGlobalStorage(const CXCursor * cursor) {
  return clang_Cursor_hasVarDeclGlobalStorage(*cursor);
}
static inline int wrap_Cursor_hasVarDeclExternalStorage(const CXCursor * cursor) {
  return clang_Cursor_hasVarDeclExternalStorage(*cursor);
}
/* OMITTED: CXCursorSet             clang_createCXCursorSet (void); */

/* OMITTED: void                    clang_disposeCXCursorSet (CXCursorSet cset); */

/* OMITTED: unsigned                clang_CXCursorSet_contains (CXCursorSet cset, CXCursor cursor); */

/* OMITTED: unsigned                clang_CXCursorSet_insert (CXCursorSet cset, CXCursor cursor); */

static inline void wrap_getCursorSemanticParent(const CXCursor * cursor, CXCursor * result) {
  *result = clang_getCursorSemanticParent(*cursor);
}
static inline void wrap_getCursorLexicalParent(const CXCursor * cursor, CXCursor * result) {
  *result = clang_getCursorLexicalParent(*cursor);
}
/* OMITTED: void                    clang_getOverriddenCursors (CXCursor cursor, CXCursor * * overridden, unsigned * num_overridden); */

/* OMITTED: void                    clang_disposeOverriddenCursors (CXCursor * overridden); */

static inline CXFile wrap_getIncludedFile(const CXCursor * cursor) {
  return clang_getIncludedFile(*cursor);
}
/* OMITTED: unsigned         clang_PrintingPolicy_getProperty (CXPrintingPolicy Policy, enum CXPrintingPolicyProperty Property); */

/* OMITTED: void             clang_PrintingPolicy_setProperty (CXPrintingPolicy Policy, enum CXPrintingPolicyProperty Property, unsigned Value); */

static inline CXPrintingPolicy wrap_getCursorPrintingPolicy(const CXCursor * C) {
  return clang_getCursorPrintingPolicy(*C);
}
static inline void wrap_getCursorPrettyPrinted(const CXCursor * Cursor, CXPrintingPolicy Policy, CXString * result) {
  *result = clang_getCursorPrettyPrinted(*Cursor, Policy);
}
/* *** Debugging facilities *** */

/* <https://clang.llvm.org/doxygen/group__CINDEX__DEBUG.html> */

static inline void wrap_getCursorKindSpelling(enum CXCursorKind Kind, CXString * result) {
  *result = clang_getCursorKindSpelling(Kind);
}