bootstrap/imports.h

unsigned                clang_isReference (enum CXCursorKind CK);
unsigned                clang_isExpression (enum CXCursorKind CK);
unsigned                clang_isStatement (enum CXCursorKind CK);
unsigned                clang_isAttribute (enum CXCursorKind CK);
unsigned                clang_isInvalid (enum CXCursorKind CK);
unsigned                clang_isTranslationUnit (enum CXCursorKind CK);
unsigned                clang_isPreprocessing (enum CXCursorKind CK);
unsigned                clang_isUnexposed (enum CXCursorKind CK);
// OMITTED: enum CXLanguageKind     clang_getCursorLanguage (CXCursor cursor);
enum CXTLSKind          clang_getCursorTLSKind (CXCursor cursor);
CXTranslationUnit       clang_Cursor_getTranslationUnit (CXCursor cursor);
void             clang_PrintingPolicy_dispose (CXPrintingPolicy Policy);